[package]
name = "cat-cli"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
inline_colorization = "0.1.6"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1