[package]
name = "cat-cli"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
exitfailure = "0.5.1"
image = "0.25.5"
inline_colorization = "0.1.6"
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
viuer = { version = "0.9.1", features = ["sixel"] }

[profile.release]
strip = true
opt-level = 'z'
lto = true
codegen-units = 1
